; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/bios/extr_bios_parser.c_bios_parser_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/bios/extr_bios_parser.c_bios_parser_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_bios = type { i32 }
%struct.bios_parser = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dc_bios**)* @bios_parser_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bios_parser_destroy(%struct.dc_bios** %0) #0 {
  %2 = alloca %struct.dc_bios**, align 8
  %3 = alloca %struct.bios_parser*, align 8
  store %struct.dc_bios** %0, %struct.dc_bios*** %2, align 8
  %4 = load %struct.dc_bios**, %struct.dc_bios*** %2, align 8
  %5 = load %struct.dc_bios*, %struct.dc_bios** %4, align 8
  %6 = call %struct.bios_parser* @BP_FROM_DCB(%struct.dc_bios* %5)
  store %struct.bios_parser* %6, %struct.bios_parser** %3, align 8
  %7 = load %struct.bios_parser*, %struct.bios_parser** %3, align 8
  %8 = icmp ne %struct.bios_parser* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = call i32 (...) @BREAK_TO_DEBUGGER()
  br label %17

11:                                               ; preds = %1
  %12 = load %struct.bios_parser*, %struct.bios_parser** %3, align 8
  %13 = call i32 @destruct(%struct.bios_parser* %12)
  %14 = load %struct.bios_parser*, %struct.bios_parser** %3, align 8
  %15 = call i32 @kfree(%struct.bios_parser* %14)
  %16 = load %struct.dc_bios**, %struct.dc_bios*** %2, align 8
  store %struct.dc_bios* null, %struct.dc_bios** %16, align 8
  br label %17

17:                                               ; preds = %11, %9
  ret void
}

declare dso_local %struct.bios_parser* @BP_FROM_DCB(%struct.dc_bios*) #1

declare dso_local i32 @BREAK_TO_DEBUGGER(...) #1

declare dso_local i32 @destruct(%struct.bios_parser*) #1

declare dso_local i32 @kfree(%struct.bios_parser*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
